<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/emailLoginForm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logInButtonText"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filler"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="19sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/signUpNavButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpButtonText"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:maxLines="1"/>


    </LinearLayout>

</LinearLayout>